Fix right nav bar z-index(conflict with echo)

--- a/css/default.css
+++ b/css/default.css
@@ -363,7 +363,6 @@ strike {
 
 .Liberty .content-wrapper .liberty-sidebar .liberty-right-fixed {
 	position: fixed;
-	z-index: 999;
 }
 
 .Liberty .content-wrapper .liberty-sidebar .liberty-right-fixed .live-recent {
